Some work on CNT and CAR

--- a/localisation/KR_Spain_Carlist_l_english.yml
+++ b/localisation/KR_Spain_Carlist_l_english.yml
@@ -4,11 +4,11 @@
 CAR_assassinate_prince:0 "Assassinate the Crown Prince"
 CAR_assassinate_prince_desc:0 "Our agents believe that they can kill the Crown Prince - this would clear help clear the road to Xavier becoming the king and put our enemies into chaos."
 CAR_election_success:0 "Election Success"
-CAR_election_success_tooltip:0 "During the Elections of 1937, Spain has seen an unprecedented surge of left-wing voters. The C.N.T. has been put in power, but Spain is still on the hinge of disaster.\n\n"
+CAR_election_success_desc:0 "During the Elections of 1937, Spain has seen an unprecedented surge of voting. The Carlists have been put in power, but Spain is still on the hinge of disaster."
 CAR_aftermath_of_civil_war:0 "Aftermath of the Civil War"
-CAR_aftermath_of_civil_war_tooltip:0 "The Spanish Civil War was a bloody period of Spanish history. Though we have emerged victorious, it will take a long time before the country recovers.\n\n"
+CAR_aftermath_of_civil_war_desc:0 "The Spanish Civil War was a bloody period of Spanish history. Though we have emerged victorious, it will take a long time before the country recovers."
 CAR_consolidating_spain:0 "Consolidating Spain"
-CAR_consolidating_spain_tooltip:0 "Our country has been torn apart by inner conflict, and only time will tell if her new regime will be able to keep it afloat.\n\n"
+CAR_consolidating_spain_desc:0 "Our country has been torn apart by inner conflict, and only time will tell if her new regime will be able to keep it afloat."
 
 CAR_domestic_focus:0 "Mending the Rift"
 CAR_oppress_opposition:0 "Crush the Revolutionaries"
@@ -26,7 +26,7 @@ CAR_helping_hand_focus:0 "Recovery from the Black Monday"
 
 CAR_militia_focus:0 "A Catholic Army"
 CAR_radio_focus:0 "The Word of God"
-CAR_radio_tooltip:0 "The "Receptador del Pueblo", or "People's Receiver", is a radio receiver produced en masse and distributed among the people freely. This has been the start of a Spanish radio culture.\n\n"
+CAR_radio_focus_desc:0 "The "Receptador del Pueblo", or "People's Receiver", is a radio receiver produced en masse and distributed among the people freely. This has been the start of a Spanish radio culture."
 CAR_propaganda_focus:0 "Propaganda in the Church"
 CAR_school_focus:0 "Centro de Estudios Universitarios"
 
@@ -59,6 +59,9 @@ CAR_advisors_italianfed:0 "Italian Assistance"
 
 ### Tooltips ###
 CAR_begin_plot:0 "Enact the plan to kill the Crown Prince... this could take some time to complete.\n"
+CAR_won_civil_war:0 "Won the civil war in Spain\n"
+CAR_remove_cores_SPR:0 "Remove all core states of [SPR.GetNameDef]\n"
+CAR_remove_cores_CNT:0 "Remove all core states of [CNT.GetNameDef]\n"
 
 ### Parties ###
 CAR_totalist_party:0 "POUM"
