--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -292,6 +292,10 @@ sprc.103.t:0 "The End of the Spanish War"
 sprc.103.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported they learned many valuable lessons regarding the nature of modern warfare over the course of the conflict."
 sprc.103.a:0 "Great!"
 
+sprc.120.t:0 "Victory!"
+sprc.120.d:0 "Despite the challenges we faced, we have succeeded in defeating the anarchists and leftists that would have torn us apart! Now that Spain is truly united once again, we must take our first steps into this new era as a kingdom reborn."
+sprc.120.a:0 "Great"
+
 sprc.122.t:0 "[Root.GetAdjective] Terror"
 sprc.122.d:0 "During ongoing civil war some of our commanders started to use rather doubtful methods to permanently suppress civilian population suspicious of helping our mortal enemies. Such policies, even if looks drastic, are necessary in these dark times."
 sprc.122.a:0 "War is war..."
@@ -339,7 +343,7 @@ sprc.211.b:0 "Leave the city as it stands"
 
 sprc.220.t:0 "Victory!"
 sprc.220.d:0 "Despite the challenges we faced, we have succeeded in uniting our nation together under a Syndicalist Government! Now that Spain is truly united, we must take our first steps into this new era with our fellow Syndicalists."
-sprc.220.a:0 "Great."
+sprc.220.a:0 "Great"
 
 sprc.221.t:0 "The People's Home"
 sprc.221.d:0 "Now that we have won the Civil War, our Syndicalist dream has become a reality! But should we keep the People's home in Barcelona, or move it to the old capital in Madrid?"
