localization for the AUS and 2 additonal capital choices for the CSA

--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -420,6 +420,8 @@ combinedsyndicates.2.d:0 "With the end of the civil war, we should decide where 
 combinedsyndicates.2.a:0 "Capital remains in Chicago."
 combinedsyndicates.2.b:0 "Washington has been cleansed of capitalist influences."
 combinedsyndicates.3.t:0 "Rebuilding Revolutionary America"
+combinedsyndicates.2.c:0 "Let us move the capital to New York City instead!"
+combinedsyndicates.2.e:0 "Let us move the capital to Philadelphia instead!"
 combinedsyndicates.3.d:0 "The civil war had caused great damage throughout the country and there was much that needed to be done to ensure that the US would be great again. Reed believed that a strong industrial base would not only help the country rebuild but also help with unemployment. The rebuilding of the country would not be easy and would require a great deal of planning."
 combinedsyndicates.3.a:0 "5 Year Plan"
 combinedsyndicates.3.b:0 "3 Year Plan"
