--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -85,64 +85,65 @@ TEX_southern_workers_desc:0 "There are many patriotic American workers that are 
 TEX_expand_the_railroads:0 "Expand the Railroads"
 TEX_expand_the_railroads_desc:0 "In order to have victory we need better infrastructure. To that end let us expand our railroads and build more. This will help us have victory."
 TEX_americas_resources:0 "The resources of America"
-TEX_americas_resources_desc:0 ""
+TEX_americas_resources_desc:0 "The resources of America are abundant and ready and available for the people to use. Let us focus on supporting the companies that will help the American people. With the resources of America being utilized properly for America, victory will be ours!"
 TEX_military_economics:0 "Military economics"
-TEX_military_economics_desc:0 ""
+TEX_military_economics_desc:0 "To win the war we need a militarized economy geared towards nothing but winning the Civil War. We have many patriotic people who work in the factories let our martial spirit guide the American Workers to bringing a people's victory at the factories and in the field!"
 TEX_a_new_economy:0 "A new Economy"
-TEX_a_new_economy_desc:0 ""
+TEX_a_new_economy_desc:0 "We have a new economy that is now for the people, by the people, of the people. It is a populist economy that holds the people as the center of the economy. The American People will have an economy protected for them by the guiding hand of the Kingfish. "
 TEX_corprotist_economics:0 "Corporate Economics"
-TEX_corprotist_economics_desc:0 ""
+TEX_corprotist_economics_desc:0 "In order to win the revolution we should work with the corporations that are friendly to us. Companies like Ford, Remington, Fairchild and more all support the American Union State. Their ingenuity, wealth, and resources will be of great use in winning the civil war. "
 TEX_women_at_work:0 "Women at Work"
-TEX_women_at_work_desc:0 ""
+TEX_women_at_work_desc:0 "While the men marching to the front and bringing victory for America, we need to make sure that our factories do not stop their production for war. Patriotic women are free and can help pick up the slack for their husbands and do their part in bringing victory to America. Let us give our women jobs in the factory and let our men go to the front instead. "
 TEX_nationalistic_propaganda:0 "Nationalistic Propaganda"
-TEX_nationalistic_propaganda_desc:0 ""
+TEX_nationalistic_propaganda_desc:0 "We need to win hearts and minds as well as win on the battlefield. To that end let us focus on spreading the propaganda of our revolution and the virtues of America and Huey Long. By focusing on the propaganda efforts we can spread our victory and win the hearts and minds of Americans. "
 TEX_military_build_up:0 "Military Build up"
-TEX_military_build_up_desc:0 ""
+TEX_military_build_up_desc:0 "Let us build up the military production. To the Mines! To the Mills! To the factories! Americans shall go and bring victory for all patriotic Americans everywhere."
 TEX_food_companies:0 "Support our Food Companies"
-TEX_food_companies_desc:0 ""
+TEX_food_companies_desc:0 "To make sure that we have the food for the people let us support the farming companies and those that help out the farmers. This will make sure that our men have all the supplies and we have all the resources to win this war. "
 TEX_southern_corporations:0 "Military Industrial Complex"
-TEX_southern_corporations_desc:0 ""
-TEX_support_the_railroads:0 "Support Railroad companies"
-TEX_support_the_railroads_desc:0 ""
-TEX_support_resources_firms:0 "Support the oil and mining companies"
-TEX_support_resources_firms_desc:0 ""
+TEX_southern_corporations_desc:0 "We should work closely with the industrial leaders and military leaders. By having the two closely allied together they can help create the factories that will win this war for all patriotic Americans. We need to make sure that we have all facotires geared towards this war and by forging an alliance between our military and industrial leaders we can achieve our glorious victory. "
+TEX_support_the_railroads:0 "Support Infrastructure companies"
+TEX_support_the_railroads_desc:0 "There are a number of railroad companies throughout the country as well new automotive companies. By working closely with them we can build the roads and rails needed to bring our troops to the front lines and keep our men supplied. This is just another step in bringing victory to all true Americans. "
+TEX_support_resources_firms:0 "Support The Resource Companies"
+TEX_support_resources_firms_desc:0 "This is a modern war and as such we need the resources to win the war. Steel, coal, oil, aluminum and more are all needed. Thankfully there are a number of companies that are willing to support us. For every resource there is a patriotic company standing there to help the true America take flight. "
 TEX_war_economics:0 "War economics"
-TEX_war_economics_desc:0 ""
+TEX_war_economics_desc:0 "The sinews of war are infinite money. So said Cicero in the ancient Roman Republic and in the new American republic that we are building that holds true as well. The corporations are making the factories to win this war and to win this war all the factories need to be geared towards victory for America!"
 TEX_corporate_power:0 "Corporate Power"
-TEX_corporate_power_desc:0 ""
+TEX_corporate_power_desc:0 "The might of corporations brings victory for Americans. With their vast resources and ingenuity we will have victory for every true and patriotic American. The riches the Corporations earn through the war shall go to all who fought for the True America and their might will make everyone tremble against the Eagle."
 
 ### Foci - Politics ###
 TEX_the_new_republic:0 "The New American Republic"
-TEX_the_new_republic_desc:0 ""
+TEX_the_new_republic_desc:0 "With the victory of the American Union State it is time to work on forming a new American Republic. It will take time but a newer more patriotic America shall be reborn from the ashes of the civil war."
 TEX_longs_republic:0 "Long's Republic"
-TEX_longs_republic_desc:0 ""
+TEX_longs_republic_desc:0 "The vile assassination plot against Huey Long has been stopped and uncovered. All enemies must be rooted and the people must rally around the Kingfish to oppose their dangerous extremism. With Huey Long leading America, all her enemies will be destroyed both foreign and domestic! "
 TEX_share_the_wealth:0 "Share our Wealth"
-TEX_share_the_wealth_desc:0 ""
+TEX_share_the_wealth_desc:0 "Huey Long was bound by the extremists in his alliance who hated his idea of share the wealth behind closed doors. But with their treachery in the open he can now fully implement his plan to bring prosperity to all Americans around the country!"
 TEX_expand_the_minutemen:0 "Expand the Minutemen"
-TEX_expand_the_minutemen_desc:0 ""
-TEX_loyalty_to_long:0 "Loyalty to the KingFisher"
-TEX_loyalty_to_long_desc:0 ""
+TEX_expand_the_minutemen_desc:0 "The treachery of Pelley and the extremists have shown that the Minutemen need to be expanded both in manpower but also in their powers. While some may protest, this is in the best interest of all Americans. The people and Long shall be protected from every barbarous attack that can be launched against them. Some civil liberties will be sacrificed but it is necessary for the safety of all Americans."
+TEX_loyalty_to_long:0 "Loyalty to the Kingfish"
+TEX_loyalty_to_long_desc:0 "Loyalty to Huey Long must be stressed. Huey Long is the protector and savior of America and he will keep the republic safe. We must make sure that no more snakes like Pelley sneak their way into power in America. No traitor shall ever threaten America again while the people are loyal to Huey Long. "
 TEX_I_am_for_the_poor_man:0 "I am for the Poor man"
-TEX_I_am_for_the_poor_man_desc:0 ""
+TEX_I_am_for_the_poor_man_desc:0 "I'm for the poor man — all poor men, black and white, they all gotta have a chance. They gotta have a home, a job, and a decent education for their children"
 TEX_perfect_dictatorship:0 "It Can Happen Here!"
-TEX_perfect_dictatorship_desc:0 ""
+TEX_perfect_dictatorship_desc:0 "Long has been unleashed to be the populist leader that America needs and he has transformed America under his rule. The American Republic shall be guided by Long and his policies to protect America. Democracy may be eroded but Long will keep America safe and prosperous."
 TEX_every_man_a_king:0 "Every Man a King!"
-TEX_every_man_a_king_desc:0 ""
+TEX_every_man_a_king_desc:0 "Those are the things we propose to do. "Every man a king." Every man to eat when there is something to eat - all to wear something when there is something to wear. That makes us all sovereign."
 TEX_american_legion:0 "Apartheid America"
-TEX_american_legion_desc:0 ""
+TEX_american_legion_desc:0 "The Great Huey Long has been assassinated! In the chaos William Pelley has taken control and plans on bring a radical extremist vision of America to existence. With him in control, a strongly racists vision for America is being implemented in America."
 TEX_old_southern_money:0 "Corporate Ties"
-TEX_old_southern_money_desc:0 ""
+TEX_old_southern_money_desc:0 "To keep the new state safe we should work with the corporations and with their wealth we can help belly any chaos that will come about as we establish our new vision for America. It is no issue if they can profit off our vision for America."
 TEX_protecting_our_race:0 "Protecting our Race"
-TEX_protecting_our_race_desc:0 ""
+TEX_protecting_our_race_desc:0 "Pelley and the Extremists have set up a clearly racist regime in America in the name of protecting the Purity of America. This racist policy will protect the whites in America from foreigners and undesirables. This shall help rejuvenate America and make her strong and prosperous once again. "
 TEX_democracy_for_whites:0 "Democracy for the White man"
-TEX_democracy_for_whites_desc:0 ""
+TEX_democracy_for_whites_desc:0 "Long wished to destroy Democracy but we do not. We shall preserve and expand democracy but only for whites. In our America it will only those whom are civilized and pure will have voting abilities. This will also help make sure that those who would oppose our regime can not vote in it. "
 TEX_white_welfare:0 "Welfare for the white man"
-TEX_white_welfare_desc:0 ""
+TEX_white_welfare_desc:0 "There are a number of whites who would be willing to become anarchists and destroy the America that we are building. However we can stop this by giving welfare to white Americans. This will win them to our side and keep them from opposing our regime."
 TEX_america_is_christian:0 "America is a Christian Nation"
-TEX_america_is_christian_desc:0 ""
+TEX_america_is_christian_desc:0 "The old republic was a godless republic that tried to keep God out of people's life and the government. However America is a christian nation and we are going to make sure that God has a place in our new regime and christian values are represented."
 TEX_new_american_century:0 "A New American Century"
+TEX_new_american_century_desc:0 "We have established a new republic, that transformed America into a new era. Gone was the days where the government tried to be tolerant to non-white Americans, we are going to spread Jim Crow throughout the country. We have set up a new America and today is the dawn of a new America and a new American Century. "
 TEX_a_new_constitution:0 "The New Constitution"
-TEX_a_new_constitution_desc:0 ""
+TEX_a_new_constitution_desc:0 "Regardless whom won the struggle for power it is time to write up a new constitution. This will help define the new government and establish the New American Republic that we have planned to establish. Now a new America shall be born from the ashes of the old. "
 
 ### Foci - Reconstruction ###
 TEX_reconstruction_policies:0 "Reconstruction Policies"
@@ -219,17 +220,6 @@ american_states_league_of_nations:0 "League of American States"
 TEX_american_school:0 "American School"
 TEX_american_school_desc:0 ""
 TEX_american_cooperation:0 "American League Cooperation"
-TEX_side_with_canada:0 "Side with Canada"
-TEX_side_with_canada_desc:0 ""
-TEX_entente_trade:0 "Entente Trade"
-TEX_entente_trade_desc:0 ""
-TEX_entente_research:0 "Entente Research Cooperation"
-TEX_side_with_germany:0 "Side with Germany"
-TEX_side_with_germany_desc:0 ""
-TEX_german_trade:0 "German Trade ties"
-TEX_german_trade_desc:0 ""
-TEX_german_research:0 "German Research Cooperation"
-TEX_german_research_desc:0 ""
 TEX_war_plan_red:0 "War Plan Red"
 TEX_war_plan_red_desc:0 ""
 TEX_entente_embargo:0 "Embargo the Entente"
