--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -303,8 +303,8 @@ POL_combined_arms:0 "Combined Arms"
 POL_combined_arms_desc:0 "Wars are not fought with just an army, but rather with a combination of infantry, armour, and an air force. We must make use of this combined arms theory by teaching our officers proper military techniques."
 POL_infantry_tactics:0 "Integrated Infantry Tactics"
 POL_infantry_tactics_desc:0 "We must focus on improving our soldiers when they are still in training, so that they are well prepared when the bullets begin flying."
-POL_tp_program:0 "The TP Program"
-POL_tp_program_desc:0 "The 'TP-Program' is a Polish initiative to re-purpose old German Panzer designs to suit our own needs. We must fund this program to ensure that we have strong panzer designs to support our forces in the coming wars."
+POL_tp_program:0 "The '9-tonne Polish' Program"
+POL_tp_program_desc:0 "The '9-tonne Polish' program is a Polish military initiative to re-purpose old German Panzer designs to suit our own needs. The original model under consideration was the German Kätzchen, but shifts in the political landscape could lean the initiative in a different direction."
 POL_expand_airbase:0 "Expand our Air Defences"
 POL_expand_airbase_desc:0 "Even if Poland cannot afford to create a strong airforce of her own, we can still afford to shoot down other nation's air forces. Improving our national anti-air defences will certainly come in handy in the event of hostilities."
 POL_brest_livotsk:0 "Return of Brest-Litovsk"
@@ -334,6 +334,7 @@ POL_INTERNATIONAL_COMMUNITY:0 "Rejoined the International Community"
 POL_SUBMARINE_WARFARE:0 "Using Unrestricted Submarine Warfare"
 POL_REFUSED_DEMANDS:0 "Refused our Demands"
 POL_ACCEPTED_DEMANDS:0 "Accepted our Demands"
+POL_SELECTED_OUR_DESIGN:0 "Selected our Armour Design"
 POL_KRAKOW:0 "Returned Krakow"
 POL_REFUSED_PROTECTION:0 "Refused our Protection"
 POL_REFUSED_ALLIANCE:0 "Refused an Alliance"
@@ -1017,7 +1018,6 @@ poland.159.a:0 "Glorious!"
 poland.160.t:0 "Georgia Remains Silent"
 poland.160.d:0 "to-do"
 poland.160.a:0 "We could have used their strength..."
-
 poland.161.t:0 "Poland Joins the Internationale?"
 poland.161.d:0 "After their recent Syndicalist revolution, the small nation of Poland is seeking to join the ranks of Syndicalism worldwide, the Internationale. Should we allow them into our ranks?"
 poland.161.a:0 "Our brothers!"
@@ -1172,6 +1172,15 @@ poland.207.t:0 "Intervening in Galicia"
 poland.207.d:0 "With the recent crisis and civil war in the Austrian Empire, the small Galician state has presented itself as a ripe target. Austria is in no position to defend them, we have a decent claim to the region, and they have a large Polish population which would *undoubtedly* welcome our liberating soldiers with open arms. This seems to be the perfect opportunity for the new regime to flex its muscles..."
 poland.207.a:0 "We are not prepared."
 poland.207.b:0 "Attack!"
+poland.208.t:0 "Licensing a Panzer Design"
+poland.208.d:0 "The '9-tonne Polish' program has reached a point where a design must be settled on if production is to begin. There are many different nation's armour designs we may attempt to license as a base for our design, but we may only choose one of them. \n\nWhich design should we attempt to license?"
+poland.208.a:0 "Let us choose the Commune's H35."
+poland.208.b:0 "Let us choose the German Kätzchen."
+poland.208.c:0 "Let us choose the Austrian Panzer L.20 Pfau."
+poland.208.e:0 "Let us choose the Canadian Vickers LT III."
+poland.208.f:0 "Let us choose the Russian T-25."
+poland.208.g:0 "Let us choose the Soviet T-25."
+poland.208.h:0 "Let us create our own design, instead."
 
 ### Global Flags ###
 POL_REPUBLIC:0 "Declared the Polish Republic"
