A few more spelling fixes

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -87,9 +87,9 @@ TEX_expand_the_railroads_desc:0 "In order to have victory we need better infrast
 TEX_americas_resources:0 "The resources of America"
 TEX_americas_resources_desc:0 "The resources of America are abundant and ready and available for the people to use. Let us focus on supporting the companies that will help the American people. With the resources of America being utilized properly for America, victory will be ours!"
 TEX_military_economics:0 "Military economics"
-TEX_military_economics_desc:0 "To win the war we need a militarized economy geared towards nothing but winning the Civil War. We have many patriotic people who work in the factories let our martial spirit guide the American Workers to bringing a people's victory at the factories and in the field!"
+TEX_military_economics_desc:0 "To win the war we need a militarised economy geared towards nothing but winning the Civil War. We have many patriotic people who work in the factories let our martial spirit guide the American Workers to bringing a people's victory at the factories and in the field!"
 TEX_a_new_economy:0 "A new Economy"
-TEX_a_new_economy_desc:0 "We have a new economy that is now for the people, by the people, of the people. It is a populist economy that holds the people as the center of the economy. The American People will have an economy protected for them by the guiding hand of the Kingfish. "
+TEX_a_new_economy_desc:0 "We have a new economy that is now for the people, by the people, of the people. It is a populist economy that holds the people as the centre of the economy. The American People will have an economy protected for them by the guiding hand of the Kingfish. "
 TEX_corprotist_economics:0 "Corporate Economics"
 TEX_corprotist_economics_desc:0 "In order to win the revolution we should work with the corporations that are friendly to us. Companies like Ford, Remington, Fairchild and more all support the American Union State. Their ingenuity, wealth, and resources will be of great use in winning the civil war. "
 TEX_women_at_work:0 "Women at Work"
@@ -101,11 +101,11 @@ TEX_military_build_up_desc:0 "Let us build up the military production. To the Mi
 TEX_food_companies:0 "Support our Food Companies"
 TEX_food_companies_desc:0 "To make sure that we have the food for the people let us support the farming companies and those that help out the farmers. This will make sure that our men have all the supplies and we have all the resources to win this war. "
 TEX_southern_corporations:0 "Military Industrial Complex"
-TEX_southern_corporations_desc:0 "We should work closely with the industrial leaders and military leaders. By having the two closely allied together they can help create the factories that will win this war for all patriotic Americans. We need to make sure that we have all facotires geared towards this war and by forging an alliance between our military and industrial leaders we can achieve our glorious victory. "
+TEX_southern_corporations_desc:0 "We should work closely with the industrial leaders and military leaders. By having the two closely allied together they can help create the factories that will win this war for all patriotic Americans. We need to make sure that we have all factorises geared towards this war and by forging an alliance between our military and industrial leaders we can achieve our glorious victory. "
 TEX_support_the_railroads:0 "Support Infrastructure companies"
 TEX_support_the_railroads_desc:0 "There are a number of railroad companies throughout the country as well new automotive companies. By working closely with them we can build the roads and rails needed to bring our troops to the front lines and keep our men supplied. This is just another step in bringing victory to all true Americans. "
 TEX_support_resources_firms:0 "Support The Resource Companies"
-TEX_support_resources_firms_desc:0 "This is a modern war and as such we need the resources to win the war. Steel, coal, oil, aluminum and more are all needed. Thankfully there are a number of companies that are willing to support us. For every resource there is a patriotic company standing there to help the true America take flight. "
+TEX_support_resources_firms_desc:0 "This is a modern war and as such we need the resources to win the war. Steel, coal, oil, aluminium and more are all needed. Thankfully there are a number of companies that are willing to support us. For every resource there is a patriotic company standing there to help the true America take flight. "
 TEX_war_economics:0 "War economics"
 TEX_war_economics_desc:0 "The sinews of war are infinite money. So said Cicero in the ancient Roman Republic and in the new American republic that we are building that holds true as well. The corporations are making the factories to win this war and to win this war all the factories need to be geared towards victory for America!"
 TEX_corporate_power:0 "Corporate Power"
@@ -135,7 +135,7 @@ TEX_old_southern_money_desc:0 "To keep the new state safe we should work with th
 TEX_protecting_our_race:0 "Protecting our Race"
 TEX_protecting_our_race_desc:0 "Pelley and the Extremists have set up a clearly racist regime in America in the name of protecting the Purity of America. This racist policy will protect the whites in America from foreigners and undesirables. This shall help rejuvenate America and make her strong and prosperous once again. "
 TEX_democracy_for_whites:0 "Democracy for the White man"
-TEX_democracy_for_whites_desc:0 "Long wished to destroy Democracy but we do not. We shall preserve and expand democracy but only for whites. In our America it will only those whom are civilized and pure will have voting abilities. This will also help make sure that those who would oppose our regime can not vote in it. "
+TEX_democracy_for_whites_desc:0 "Long wished to destroy Democracy but we do not. We shall preserve and expand democracy but only for whites. In our America it will only those whom are civilised and pure will have voting abilities. This will also help make sure that those who would oppose our regime can not vote in it. "
 TEX_white_welfare:0 "Welfare for the white man"
 TEX_white_welfare_desc:0 "There are a number of whites who would be willing to become anarchists and destroy the America that we are building. However we can stop this by giving welfare to white Americans. This will win them to our side and keep them from opposing our regime."
 TEX_america_is_christian:0 "America is a Christian Nation"
@@ -611,7 +611,7 @@ unionstate.212.d:0 "Pablo González Garza and a number of men have surrounded th
 unionstate.212.a:0 "The Coup is successful!"
 unionstate.212.b:0 "The Coup Fails!"
 unionstate.213.t:0 "The Coup is successful"
-unionstate.213.d:0 "We have received word from Garza that he is now in control of Mexico and that he will be doing all that he can to destroy syndicalism within the country. Our border with our southern neighbors shall now be better protected without godless syndicalists at our gates."
+unionstate.213.d:0 "We have received word from Garza that he is now in control of Mexico and that he will be doing all that he can to destroy syndicalism within the country. Our border with our southern neighbours shall now be better protected without godless syndicalists at our gates."
 unionstate.213.a:0 "Great!"
 unionstate.214.t:0 "Treaty with America?"
 unionstate.214.d:0 "Now that Garza is in control of Mexico, it would be good to sign a treaty with the American Union State giving us better relations. This would of course place Mexico in the American orbit but the gringos would want some reward for helping us get into power and would get them off our back."
