--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -145,7 +145,7 @@ sprd.12.a:0 "Oh my"
 ### CNT-FAI Chain ###
 
 sprd.13.t:0 "The CNT-FAI"
-sprd.13.d:0 "The anarcho-syndicalist union of the CNT-FAI are one of the greatest threats to His Majesty's Government. Yesterday, Joaquin Maur匤 Juli・, a leader in the movement made a speech entitled 'My Heroes' in which he stated that the CNT will attempt to organise all laid off workers in an effort to save the country's economy."
+sprd.13.d:0 "The anarcho-syndicalist union of the CNT-FAI are one of the greatest threats to His Majesty's Government. Yesterday, Joaquin Maur匤 Juli・, a leader in the movement made a speech entitled 'My Heroes' in which he stated that the CNT will attempt to organise all laid off workers in an effort to save the country's economy." #um what? "Maur匤"???
 sprd.13.a:0 "Ban the organisation of workers"
 sprd.13.b:0 "Arrest the leaders of the movement"
 sprd.13.c:0 "Forcefully disband the movement"
