--- a/localisation/KR_Sweden_l_english.yml
+++ b/localisation/KR_Sweden_l_english.yml
@@ -38,7 +38,7 @@ SWE_statare_desc:0 "A 'Statare' is a farm-worker with poor legal protection and 
 SWE_redrule1:0 "Revolutionary Changes"
 SWE_redrule1_desc:0 "To change people's minds are more difficult than one might think at first."
 SWE_redrule2:0 "Revolutionary Renewal"
-SWE_redrule2_desc:0 "In addition to the issues with educating our people to see things in a different way, dismantling our entire economy over night had some unforseen negative effects. Who would've thought?"
+SWE_redrule2_desc:0 "In addition to the issues with educating our people to see things in a different way, dismantling our entire economy over night had some unforeseen negative effects. Who would've thought?"
 SWE_redrule3:0 "Revolutionary Revision"
 SWE_redrule3_desc:0 "With our society in uproar and our economy staggering to survive, our proposed military reforms are met with suspicion from officers and privates alike. They will see the light soon enough... Hopefully."
 SWE_redrule4:0 "Revolutionary Transformation"
@@ -63,7 +63,7 @@ SWE_totalistpeople:0 "Totalist People"
 SWE_totalistpeople_desc:0 "The people of our nation have been informed that there are spies and enemies around every corner, and that only their vigilant, watching eyes can safeguard the revolution."
 
 SWE_syndicalistmilitary:0 "Syndicalist Military"
-SWE_syndicalistmilitary_desc:0 "The Syndicalist army is primarily organised for very local, defensive tasks and lacks a common command-structure. They fight fiercly, especially in home territory, but the lack of a traditional high commander hurts the efficiency of far-stretching plans."
+SWE_syndicalistmilitary_desc:0 "The Syndicalist army is primarily organised for very local, defensive tasks and lacks a common command-structure. They fight fiercely, especially in home territory, but the lack of a traditional high commander hurts the efficiency of far-stretching plans."
 SWE_syndicalisteconomy:0 "Syndicalist Economy"
 SWE_syndicalisteconomy_desc:0 "Our economy is very autonomous and is designed to strengthen local communes, no matter their size. With full power established locally, we put the power in the hands of the people who know their own backyard."
 SWE_syndicalistsociety:0 "Syndicalist Politics"
@@ -198,7 +198,7 @@ SWE_FREETRADE:0 "Free-trade Economy"
 SWE_FREETRADE_desc:0 "The market liberals of our government have proposed investing in a merchant fleet. Sweden is rich of natural resources and our people, and government, could benefit greatly if we sold some of them on the world market."
 SWE_SUPPPVTBUS:0 "Support Private Businesses"
 SWE_SUPPPVTBUS_desc:0 "Our economy could do with some further investments and a good way to get it running would be to make it easier to start small businesses. Every town should have its own shop!"
-SWE_SUBTRADE:0 "Subsidize Our Trade"
+SWE_SUBTRADE:0 "Subsidise Our Trade"
 SWE_SUBTRADE_desc:0 "With major subsidies put into our foreign trade we could set up a trade-network strong enough to feed Sweden for generations to come."
 SWE_GERIRON:0 "German Iron Trade"
 SWE_GERIRON_desc:0 "To trade iron with Germany has been beneficial for Sweden for a long time, but it is time we intensify those trade lines. It'll be rewarding for us and the Germans alike, no doubt!"
@@ -255,7 +255,7 @@ SWE_SUB2_desc:0 "Not a single nautical mile of the Baltic sea shall be safe for 
 SWE_DOCSTRO:0 "Göteborg Naval Officer's School"
 SWE_DOCSTRO_desc:0 "In the new Göteborg Naval Officer's School we prepare our future staff for the type of wars to come. Our naval industry also re-gears to prepare for the challenges of producing larger ships and the naval bombers to support them."
 SWE_DOCPALM:0 "Karlskrona Naval Officer's Academy"
-SWE_DOCPALM_desc:0 "In the new Karlskrona Naval Officer's School we prepare our future staff for the type of wars to come. Our naval industry also re-gears to prepare for the challenges of mass-producing smaller ships and submarines, all to protect our own trade while harrassing the trade of the opposition."
+SWE_DOCPALM_desc:0 "In the new Karlskrona Naval Officer's School we prepare our future staff for the type of wars to come. Our naval industry also re-gears to prepare for the challenges of mass-producing smaller ships and submarines, all to protect our own trade while harassing the trade of the opposition."
 SWE_NAVALPROD2:0 "Kockums Mekaniska Verkstad"
 SWE_NAVALPROD2_desc:0 "The wharf of Malmö launched both HMS Tapperheten and HMS Manligheten. And still they will need to expand even more to meet our needs. Through a government effort we will soon be able to dominate the Baltic as we did hundreds of years ago!"
 
@@ -520,7 +520,7 @@ swe.71.a:0 "Join us in our righteous cause, brothers of Norway!"
 
 swe.72.t:0 "A world revolution"
 swe.72.d:0 "The flames of syndicalism reaches all across the globe. We should join a red faction, to help protect ourselves from the reactionary forces wanting to overthrow our government!"
-swe.72.a:0 "The first internationale of the French is ours too!"
+swe.72.a:0 "The first Internationale of the French is ours too!"
 swe.72.b:0 "We must approach the union of Britain."
 swe.72.c:0 "The Soviet Union has the right of it."
 
@@ -550,7 +550,7 @@ swe.78.d:0 "Scandinavia cannot stand alone in these volatile times. Sooner or la
 swe.78.a:0 "Finnländare, vårt brodersfolk!"
 
 swe.79.t:0 "Pressure Finland"
-swe.79.d:0 "For long enough, Finland have oppressed the Swedish minority living inside their borders, both on Åland but also along the western and southern coastline of Finland. However, rattling the sabers might awake the Germans, and everything needs to be handled delicatly."
+swe.79.d:0 "For long enough, Finland have oppressed the Swedish minority living inside their borders, both on Åland but also along the western and southern coastline of Finland. However, rattling the sabres might awake the Germans, and everything needs to be handled delicately."
 swe.79.a:0 "Hopefully the Germans won't mind!"
 
 swe.80.t:0 "Germany supports Finland"
@@ -644,7 +644,7 @@ swe.661.d:0 "Although there was some worry among the more well-off of our nation
 swe.661.a:0 "The middle way shall be our way."
 
 swe.61.t:0 "Riots and a coup!"
-swe.61.d:0 "The barracks of Stockholm are ablaze after workers heard of plans to overthrow the newly elected regime! Perhaps one of the instigators mumbled a leak after having a glass too much, because suddenly leaflets appeared, warning of the end of the church, the monarchy and all else that is good about Sweden, should the radical left get in power. \n\nAn organisation called Arméns Fosterlandsvänner declares martial law as soldiers move to encircle the parliament while worker militias light up molotovs and arm themselves with bricks, knives and anything else they can get their hands on!"
+swe.61.d:0 "The barracks of Stockholm are ablaze after workers heard of plans to overthrow the newly elected regime! Perhaps one of the instigators mumbled a leak after having a glass too much, because suddenly leaflets appeared, warning of the end of the church, the monarchy and all else that is good about Sweden, should the radical left get in power. \n\nAn organisation called Arméns Fosterlandsvänner declares martial law as soldiers move to encircle the parliament while worker militias light up Molotovs and arm themselves with bricks, knives and anything else they can get their hands on!"
 swe.61.a:0 "The coup is successful!"
 swe.61.b:0 "Thousands join the workers militias! The revolution is saved!"
 
@@ -826,7 +826,7 @@ swe.26.d:0 "The other day a seventeen year old lad named Ingvar Kamprad founded 
 swe.26.a:0 "Seems like an ambitious young man."
 
 swe.27.t:0 "New Malmö Theatre opens"
-swe.27.d:0 "The recently opened Malmö City Theatre is one of the largest theatres in Europe, and offers and impressive display indeed. For the opening night it will show the classic of 'A midsummer night's dream', the Shakespear classic."
+swe.27.d:0 "The recently opened Malmö City Theatre is one of the largest theatres in Europe, and offers and impressive display indeed. For the opening night it will show the classic of 'A midsummer night's dream', the Shakespeare classic."
 swe.27.a:0 "Get me a ticket!"
 
 swe.28.t:0 "Arvid Lindman passes away"
