--- a/localisation/KR_Nationalist_France_l_english.yml
+++ b/localisation/KR_Nationalist_France_l_english.yml
@@ -183,7 +183,7 @@ NFA_strenghthened_governement_desc:0 "The government is now stronger and can pre
 NFA_strenghthened_governement_tooltip:0 "§GYou will receive a special modifier according to your political choices except if you are absolutist.§! \n"
 
 NFA_homeland_reconquest:0 "Preparing the Libération"
-NFA_homeland_reconquest_desc:0 "The Commune is preparing for war against Germany and so should we prepare too. The Libération will come only if we can take advantage of all opportunites that come."
+NFA_homeland_reconquest_desc:0 "The Commune is preparing for war against Germany and so should we prepare too. The Libération will come only if we can take advantage of all opportunities that come."
 
 NFA_military_preparation:0 "Military Preparation"
 NFA_military_preparation_desc:0 "Despite having the will to fight, the French forces lack the equipment and tactics necessary to successfully engage in a modern war. This must be remedied with all haste."
@@ -192,7 +192,7 @@ NFA_Infantry_focus_desc:0 "The base of our troops is the infantry and we should 
 NFA_artillery_focus:0 "Artillery Support"
 NFA_artillery_focus_desc:0 "The research done about artillery for our new boats led to some advancements that could be useful for our ground troops, it would be a shame not to exploit it."
 NFA_legionary_motorization:0 "Divisions Motorisées"
-NFA_legionary_motorization_desc:0 "What we lack in sheer men we must counter with better tactics. Instead of relying on slow infantry we could cut into the enemy lines with motorized infantry and win more easily!"
+NFA_legionary_motorization_desc:0 "What we lack in sheer men we must counter with better tactics. Instead of relying on slow infantry we could cut into the enemy lines with motorised infantry and win more easily!"
 NFA_tank_research:0 "Tank Research"
 NFA_tank_research_desc:0 "Tanks will prove themselves to be the most important vehicle of any war, or so De Gaulle claims. It's time we invest in them."
 NFA_troupes_de_marine:0 "The Troupes de Marine"
@@ -383,7 +383,7 @@ nfa.42.t:0 "The Dakar Algiers Airways is a Success"
 nfa.42.d:0 "By managing our resources efficiently we have successfully expanded the DAA throughout Western Africa. German and South African competition has tapered off and we will soon control most of the market."
 nfa.42.a:0 "Fabulous"
 nfa.43.t:0 "The Algeria-Central Africa Census Complete"
-nfa.43.d:0 "The census of the Sahara region is complete. The population mainly consists of nomadic Tuareg herders and caravan drivers. One possible source of income is to levy taxes on the tuareg caravans."
+nfa.43.d:0 "The census of the Sahara region is complete. The population mainly consists of nomadic Tuareg herders and caravan drivers. One possible source of income is to levy taxes on the Tuareg caravans."
 nfa.43.a:0 "Tax the caravans and herders, conduct drafts"
 nfa.43.b:0 "This is not worth the effort"
 nfa.44.t:0 "The Algeria-Central Africa Inventory Complete"
