--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -235,7 +235,7 @@ ukraine.35.t:0 "German Military Mission Leaves the Ukraine"
 ukraine.35.d:0 "Following our decision to leave the hated Mitteleuropa System, the German military mission present in country since 1918 finally left!"
 ukraine.35.a:0 "Finally they leave!"
 ukraine.36.t:0 "'Arsenal'"
-ukraine.36.d:0 "On January 29, 1918, the workers of the factory 'Arsenal' in Kiev organized an armed pro-Bolshevik mutiny known as a January Rebellion against Central Rada, the Ukrainian assembly that declared the independence of Ukraine. Since then the government didn't try to expand the factory, fearing the temper of its workers. But after the triumph of the Syndicalism in Ukraine, the French government decided to help us with the reving of the factory. 'Arsenal' will mainly produce artillery, anti-tank, and anti-aircraft guns."
+ukraine.36.d:0 "On January 29, 1918, the workers of the factory 'Arsenal' in Kiev organised an armed pro-Bolshevik mutiny known as a January Rebellion against Central Rada, the Ukrainian assembly that declared the independence of Ukraine. Since then the government didn't try to expand the factory, fearing the temper of its workers. But after the triumph of the Syndicalism in Ukraine, the French government decided to help us with the revival of the factory. 'Arsenal' will mainly produce artillery, anti-tank, and anti-aircraft guns."
 ukraine.36.a:0 "That's great!"
 ukraine.37.t:0 "Ukraine Wants to Join the International"
 ukraine.37.d:0 "The government of the Ukraine has announced recently that they want to join the Syndicalist bloc. It's not a sudden move because pro-Syndicalist policy is popular in many circles including the government and army. Do we want Ukrainian workers and peasants joining the crusade against bloodthirsty Germans and rotten imperialist Canadian pigs?"
@@ -343,9 +343,9 @@ UKR_Donbass_Industry:0 "Donbass Industry"
 UKR_Donbass_Industry_desc:0 "After a long period of political turbulence, the situation in Ukraine is more or less stable. And we have a good chance to continue reforms. Our long-term aim is to develop industry in the East of Ukraine. Thanks to the Tsarist regime, we have just to re-open old Donbass factories and modernise them a little or launch a formation of a new industrial region"
 
 UKR_Reorg_army:0 "New army of Ukraine"
-UKR_Reorg_army_desc:0 "The army of Ukraine is in poor condition as the Kingdom itself. But though the Berlin Stock Crisis made us reduce the military budget, but we still have enough money to launch the new reform, which will allow us to reorganize the Ministry of defence. It's time to strengthen our independence and secure our borders from the various enemies of Ukraine."
+UKR_Reorg_army_desc:0 "The army of Ukraine is in poor condition as the Kingdom itself. But though the Berlin Stock Crisis made us reduce the military budget, but we still have enough money to launch the new reform, which will allow us to reorganise the Ministry of defence. It's time to strengthen our independence and secure our borders from the various enemies of Ukraine."
 UKR_Mobile:0 "Plans of Chernyakhovsky"
-UKR_Mobile_desc:0 "Ivan Chernyakhovsky is an young, but ambitious colonel, who has already unterstood that the future wars would be won by the heavy industry and machines - and now he demands that Ukraine should do its best to provide the army with the tanks and trucks. Their speed will help use to use the element of surprise for our profit."
+UKR_Mobile_desc:0 "Ivan Chernyakhovsky is an young, but ambitious colonel, who has already understood that the future wars would be won by the heavy industry and machines - and now he demands that Ukraine should do its best to provide the army with the tanks and trucks. Their speed will help use to use the element of surprise for our profit."
 UKR_Mobile_Forces:0 "Trucks for the Fatherland"
 UKR_Mobile_Forces_desc:0 "The trucks are very important for any modern army - that's why we have to use our industry and build a new model of the trucks, which allow us to weaken our dependence from the cavalry and the horses."
 UKR_Tank_Forces:0 "Tanks!"
@@ -359,17 +359,17 @@ UKR_Infantry1_desc:0 "The Ukrainian soldier should be well equipped, if we want 
 UKR_Doct1:0 "Foreign experience"
 UKR_Doct1_desc:0 "Lots of wars happened since the proclamation of our independence in 1918. Now is the time, when we have to rethink their lessons and results of these wars to understand the actual problems of our army and the possible methods, which can be used to improve it."
 UKR_Art1:0 "Artillery research"
-UKR_Art1_desc:0 "Artillery is very important for any modern army. We have to do everything possible to analyze the possibilities, which artillery can give to the Ukrainian army."
+UKR_Art1_desc:0 "Artillery is very important for any modern army. We have to do everything possible to analyse the possibilities, which artillery can give to the Ukrainian army."
 UKR_Massive:0 "Army of the peasants"
 UKR_Massive_desc:0 "Ukraine is one of the most populated countries in the Eastern Europe. We can use the children of the farmers on the battlegrounds of Europe, but at first we should understand, where they can bring more benefits for the country."
 UKR_Massive_inf1:0 "Equipment effort"
-UKR_Massive_inf1_desc:0 "The Weltkrieg led to the invention of many arms, that are handy in battle. They must be improved and sent to our soldiers as well as the new cheap, but multiple rifles and carabines."
+UKR_Massive_inf1_desc:0 "The Weltkrieg led to the invention of many arms, that are handy in battle. They must be improved and sent to our soldiers as well as the new cheap, but multiple rifles and carbines."
 UKR_Massive_inf2:0 "Arms for the army"
 UKR_Massive_inf2_desc:0 "We have already spent a lot of time to create the equipment for various purposes. But our army demand, that the equipment is still not perfect for the needs of the soldiers and officers."
 UKR_Massive_doct:0 "Idea for the soldiers"
 UKR_Massive_doct_desc:0 "We have many soldiers and many rifles. Someone can say that such an army is weaker than the army with the tanks and artillery, but we will definitely find out, how this army can be used at the struggle with our enemies."
-UKR_New_Army_UKR:0 "Army is reorganized"
-UKR_New_Army_UKR_desc:0 "Finally the army of Ukraine was reorganized by the Ministry of defence and our General Stsff. It seems that the army, which had been formed after 1918 to maintain the independence of Ukraine finally got its new appearance."
+UKR_New_Army_UKR:0 "Army is reorganised"
+UKR_New_Army_UKR_desc:0 "Finally the army of Ukraine was reorganised by the Ministry of defence and our General Stsff. It seems that the army, which had been formed after 1918 to maintain the independence of Ukraine finally got its new appearance."
 
 UKR_Newforpol:0 "New foreign policy"
 UKR_Newforpol_desc:0 "-"
@@ -390,7 +390,7 @@ UKR_Fra_cooperation_desc:0 "Commune of France is the torch of the progress and l
 UKR_Fra_alliance:0 "Syndicalist unity"
 UKR_Fra_alliance_desc:0 "With Ukraine finally free from German capitalist oppression we can now freely decide our stance towards the international community. The immediate alliance with other Syndicalist nations can be very profitable for us and will finally secure Ukraine from the aggressive of the Germans, who doesn't want just forget about the fail of their puppet king. We should ask France for an alliance."
 UKR_Fra_claims:0 "Red Liberation"
-UKR_Fra_claims_desc:0 "Lots of the Ukrainian lands are still under countrol of the various regimes, which don't always respect all the rights of the Ukrainiansin their countries. If we want to strengthen the friendship of the nations as well as to secure the right of the self-determination of the Ukrainians, we should claim borderlands and hope that one day we will take them back."
+UKR_Fra_claims_desc:0 "Lots of the Ukrainian lands are still under control of the various regimes, which don't always respect all the rights of the Ukrainians their countries. If we want to strengthen the friendship of the nations as well as to secure the right of the self-determination of the Ukrainians, we should claim borderlands and hope that one day we will take them back."
 UKR_RUS_friendship:0 "Great Union"
 UKR_RUS_friendship_desc:0 "-"
 UKR_RUS_Officers:0 "Northern Wind"
