There, it's back

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -125,7 +125,7 @@ worldnews.18.f:0 "The Belgrade Pact already shows its true face."
 
 worldnews.19.t:0 "The Fifth Anglo-Afghani War"
 worldnews.19.d:0 "After the Weltkrieg, as the British Raj collapsed into turmoil and warfare, the neighbouring Kingdom of Afghanistan took advantage of this as an opportunity to seize Peshawar and Quetta, both border regions of the Dominion. However, the Afghani government's attempts to modernise over the last decades have been met with fierce resistance from the conservative elements within the country. King Amanullah Khan now hopes to use the turmoil in Delhi following the death of George V to his advantage. By repeating the success of the Fourth Anglo-Afghan War, the king hopes to silence the conservative opposition and bring new lands to the crown. However, international experts do not put many hopes on the tiny mountain nation winning this conflict."
-worldnews.19.a:0 "The Afghans seek more concessions, but is India still weak enough?"
+worldnews.19.a:0 "The Afghans seek more concessions, but who cares about Afghanistan?"
 worldnews.19.b:0 "The Afghans have made their last mistake. Onwards to Kabul!"
 worldnews.19.c:0 "The Afghans are foolish. Let us hope this doesn't strengthen Delhi."
 worldnews.19.e:0 "We will free our Muslim brothers against all odds! All behind the King!"
