Ivan VII>Ivan V

--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -142,10 +142,10 @@ annex.48.b:0 "Liberate a friendly Russia!"
 annex.48.c:0 "Occupy them!"
 annex.49.t:0 "The Future of Russia"
 annex.49.d:0 "With the negotiations about Russia's territory complete, it is now time to begin planning it's own course. The majority of our government has united in supporting Louis Ferdinand, the second son of Wilhelm III as he is married a daughter of Kyril Romanov. Several ministers have suggested the pro-German Pavel Bermondt-Avalov to lead Russia instead however. What shall be done?"
-annex.49.a:0 "Prince Louis Ferdinand will rule as Ivan V"
+annex.49.a:0 "Prince Louis Ferdinand will rule as Ivan VII"
 annex.49.b:0 "Appoint Pavel Bermondt-Avalov"
 annex.50.t:0 "A Hohenzollern Tsar"
-annex.50.d:0 "The Germans have installed a Hohenzollern onto the throne of Russia, and while he has converted to the Orthodox faith it is not likely that 'Ivan V' will have an easy time ruling Russia."
+annex.50.d:0 "The Germans have installed a Hohenzollern onto the throne of Russia, and while he has converted to the Orthodox faith it is not likely that 'Ivan VII' will have an easy time ruling Russia."
 annex.50.a:0 "There's worse in alternative history I guess"
 annex.51.t:0 "Our new Prime Minister"
 annex.51.d:0 "A little while ago, Pavel Bermondt-Avalov was been 'suggested' to lead Russia by the Germans and shortly after became our new leader. He has the support of the people if only because we are now no longer fighting the Germans."
