Fixed the Norman flag and random other things

--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -153,7 +153,7 @@ annex.51.a:0 "Better then an occupation..."
 annex.52.t:0 "Fate of America"
 annex.52.d:0 "After a long fight on the American continent, we have launched a full offensive and forced Americans to surrender. Washington and the fate of entire America is now in our hands!"
 annex.52.a:0 "Liberate United states!"
-annex.52.b:0 "Liberate FUA and USA!"
+annex.52.b:0 "Liberate FSA and USA!"
 annex.52.c:0 "Balkanise America!"
 annex.52.e:0 "Liberate Combined Syndicates!"
 annex.52.f:0 "Liberate American Union!"
