Fengtian tree work

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -28,6 +28,9 @@ FNG_informal_empire_5:0 "Mantetsu Dominance"
 ### Tooltips ###
 FNG_expel_japanese_officers_tooltip:0 "Completing this focus will have dire consequences for Fengtian's relationship with Japan. \n"
 
+###Focus Flags###
+doihara_cigarettes:0 "Doihara's Proposal"
+
 ### Parties ###
 FNG_totalist_party:0 "Manchu Communist Party"
 FNG_totalist_party_long:0 "Manchu Communist Party"
@@ -228,9 +231,9 @@ FNG_Adopt_the_Arisaka_Type_99:0 "Adopt the Arisaka Type 99"
 FNG_Adopt_the_Arisaka_Type_99_desc:0 "The Arisaka Type 99 has every indication of being an excellent infantry weapon, and adopting it would undoubtedly save us both time and money."
 FNG_Incentivize_Zaibatsu_Arms_Manufacture:0 "Incentivise Zaibatsu Arms Manufacture"
 FNG_Incentivize_Zaibatsu_Arms_Manufacture_desc:0 "Japan's mighty industrial conglomerates, the Zaibatsu, already operate in Fengtian in competition to Mantetsu and domestic businesses. Encouraging Zaibatsu to produce arms in Fengtian and sell them directly to our forces would be a simple way of acquiring advanced systems otherwise outside our reach."
-#The Ishiwara Mission
-FNG_The_Ishiwara_Mission:0 "The Ishiwara Mission"
-FNG_The_Ishiwara_Mission_desc:0 "An IJA Colonel by the name of Kanji Ishiwara has indicated a desire to lead a formal military mission to Fengtian, citing apparent concerns by the General Staff about readiness. While there is no way for us to refuse this mission, it may provide valuable insights, and Ishiwara is known to be sympathetic to our views."
+#The Hiroshima Proposal
+FNG_The_Hiroshima_Proposal:0 "The Hiroshima Proposal"
+FNG_The_Hiroshima_Proposal_desc:0 "Japanese Imperial General Headquarters has recently performed an appraisal of our current military situation, and feels that it may be necessary to provide us with a series of more advanced weapons to aid our defence against the Qing and Russia. Unfortunately, accepting will play straight into the hands of the Concordia Association."
 #Naval Branch
 FNG_The_Navy_of_the_Republic:0 "The Navy of the Republic"
 FNG_The_Navy_of_the_Republic_desc:0 "The Navy of the Republic, more commonly referred to as the Fengtian Navy, currently consists of a small collection of cruisers, destroyers, and re-purposed civilian vessels. The vast majority of its ships are obsolete, dating back to the Guangxu era Beiyang Navy, and morale is low among the sailors."
@@ -553,16 +556,16 @@ fengtian.new.33.t:0 "An End to the Investment Shortage"
 fengtian.new.33.d:0 "After roughly a decade of virtually no external or internal investment beyond the government's own, Fengtian has made itself a reliable and trustworthy location for prosperous growth. Going from strength to strength, and with the fires of industry behind us, our prospects of retaking Beijing are growing by the day."
 fengtian.new.33.a:0 "Finally!"
 #The Hiroshima Proposal
-fengtian.new.34.t:0 "Colonel Ishiwara's Proposal"
-fengtian.new.34.d:0 "A Colonel serving as part of the Japanese Military Mission to the Fengtian Government has come forward with a proposal regarding arms transfers, as he feels that the relative parity in power between the Qing Empire and Fengtian Government has slipped strongly toward the former's favour. With the belief that he can leverage significant enough support in Imperial General Headquarters for three such shipments in exchange for an equal number containing non-strategic resources, while understanding the potential political complications of such an arrangement, he asks first for the opinion of our government before proceeding. Because the shipments would almost certainly depart from Hiroshima, a significant Imperial Japanese Army centre of operations, the proposal has come to be called 'The Hiroshima Proposal'."
+fengtian.new.34.t:0 "The Hiroshima Proposal"
+fengtian.new.34.d:0 "Imperial General Headquarters has cleared the proposal, and awaits the final consent of our government before presenting it before the Imperial Diet and the Prime Minister."
 fengtian.new.34.a:0 "Weapons are always welcome"
 fengtian.new.34.b:0 "The political risks are too great"
 fengtian.new.35.t:0 "The Hiroshima Proposal"
-fengtian.new.35.d:0 "Colonel Kanji Ishiwara, a member of the Military Mission to the Fengtian Government, recently brought a proposal before Imperial General Headquarters regarding a series of weapons shipments to Fengtian, in order to aid its defence against potential aggression by the Qing, Mongolia, or Russia. Three transfers of increasingly advanced equipment, specifically enough to equip four divisions, would be given in exchange for shipments of non-strategic resources of roughly equal value. The proposal has met with general approval from Imperial General Headquarters, but the Ministry of Foreign Affairs objects that the move could complicate internal Fengtian politics, causing conservative elements to feel threatened and more actively oppose our operations in the country. A smaller number of military officers also object on the grounds that Fengtian could eventually become an unreliable ally, though so far Zhang Zuolin has remained tightly under our thumb."
+fengtian.new.35.d:0 "Imperial General Headquarters has acquired the consent of the Fengtian Government regarding a series of weapons shipments, in order to aid its defence against potential aggression by the Qing, Mongolia, or Russia. Three transfers of increasingly advanced equipment, specifically enough to equip four divisions, would be provided. The proposal has met with general approval from the Army, but the Ministry of Foreign Affairs objects that the move could complicate internal Fengtian politics, causing conservative elements to feel threatened and more actively oppose our operations in the country. A smaller number of military officers also object on the grounds that Fengtian could eventually become an unreliable ally, though so far Zhang Zuolin has remained tightly under our thumb."
 fengtian.new.35.a:0 "Approve the Proposal"
 fengtian.new.35.b:0 "The Ministry of Foreign Affairs is right"
 fengtian.new.36.t:0 "Japanese Refusal"
-fengtian.new.36.d:0 "For unclear reasons, the Japanese government has decided to refuse shipments of arms to Fengtian, and as such the Ishiwara Proposal can be considered effectively abandoned."
+fengtian.new.36.d:0 "For unclear reasons, the Japanese government has decided to refuse shipments of arms to Fengtian, and as such the Hiroshima Proposal can be considered effectively abandoned."
 fengtian.new.36.a:0 "Unfortunate"
 fengtian.new.37.t:0 "The First Hiroshima Package Arrives"
 fengtian.new.37.d:0 "Containing hundreds of boxes of carefully packed rifles, along with 100 artillery pieces, the first 'Hiroshima Package' has arrived in Yingkow, with which we might equip roughly four divisions of men. Already, members of the Concordia Association are using this opportunity to demonstrate Japan's benevolence, and the purported benefits of Asian solidarity."
