--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -43,10 +43,13 @@ annex.16.t:0 "Integration of Austria"
 annex.16.d:0 "We've controlled Austria for some time now, and it seems like the local population have finally accepted our rule."
 annex.16.a:0 "Hand it over to our Italian allies!"
 annex.16.b:0 "Release Italy!"
+annex.16.c:0 "Hand it over to our Austrian friends!"
 annex.17.t:0 "The Annexation of Austrian Italy"
 annex.17.d:0 "We have taken control of the Austrian-occupied parts of Italy and we need to decide what do we do with it..."
 annex.17.a:0 "Return these lands to our Italian allies!"
-annex.17.c:0 "Let us create a loyal Italian puppet!"
+annex.17.b:0 "Let us create a loyal Italian puppet!"
+annex.17.c:0 "Hand it over to our Austrian friends!"
+annex.17.e:0 "Give Istria to Slovenia and the rest to Austria"
 annex.18.t:0 "Territories regained!"
 annex.18.d:0 "Our loyal allies have returned us the lands taken by the vile Austrians! This is a great day for the Italian people!"
 annex.18.a:0 "Hurrah!"
@@ -589,6 +592,21 @@ annex.151.d:0 "Montenegro is now firmly held in our hands after our occupation o
 annex.152.t:0 "The Fate of Albania"
 annex.152.d:0 "After a short campaign across the Albanian countryside, Tirana finally capitulated, leaving us with the control of their country. We must now decide what to do with it."
 annex.152.a:0 "Give Kosovo to Serbia and liberate the rest"
+annex.153.t:0 "The destiny of Italy"
+annex.153.d:0 "We now have to decide what to do with Italy. We can't control those territories forever and we might have to think about creating a puppet Italian state."
+annex.153.a:0 "Liberate the Italian Federation"
+annex.153.b:0 "Liberate the Socialist Republic of Italy"
+annex.153.c:0 "Give the territory to our Socialist Italian comrades"
+annex.154.t:0 "The Fate of the Netherlands"
+annex.154.d:0 "After a short campaign across the marshes and the urban centers of the Netherlands, we have managed to take down the proud nation. The Netherlands are now in our hands! We must now decide on its future."
+annex.155.t:0 "The Fate of Denmark"
+annex.155.d:0 "After a short campaign across the numerous islands of Denmark and the capture of its capital, we have managed to take down the country. Copenhagen is now in our hands! The status of the Atlantic islands of Denmark is a particularly interesting case to deal with but we'll anyway have to decide on the future of Denmark."
+annex.155.a:0 "Liberate Denmark entirely"
+annex.155.b:0 "Take all of the islands we can and liberate the mainland"
+annex.155.c:0 "Take control of Greenland and liberate Iceland"
+annex.155.e:0 "Only liberate Iceland and leave Denmark with Greenland"
+annex.156.t:0 "Fate of Portugal"
+annex.156.d:0 "Portugal is under our control, but perhaps the Portuguese would be better off governing themselves?"
 
 ### Opinion Modifiers ###
 refused_prince:0 "Refused prince"
