Glorious speech by the Grand Marshal!

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -752,8 +752,8 @@ fengtian.new.78.d_ultimatum:0 "Negotiations have failed and Japan has delivered 
 fengtian.new.78.a:0 "We have no choice"
 fengtian.new.78.b:0 "Let there be war!"
 
-fengtian.new.79.t:0 ""
-fengtian.new.79.d:0 ""
+fengtian.new.79.t:0 "Wu Wang Zai Ju"
+fengtian.new.79.d:0 " The Grand Marshal has made the following speech: \n\n The years since the formation of our Government have laid for us a solid foundation for national regeneration. We fear no problems, nor are we concerned over impending dangers. We merely lament the fate of the South, the freedom of which was originally brought about by the hard efforts and sacrifices of reformist patriots, and which has since been erased by the old and outmoded forms of government. Today, her people are powerless, and her rulers without integrity, thus allowing the slow degradation of the national condition, and the return to a state of total subservience to Western nations. These old ways are sapping China’s national strength, shaking her national foundations and, subjugating her people. \n\n It is thus that we find ourselves in the North, as the final bastion of all that our predecessors struggled to build, and the bearers of the future of a new China. The regressive Qing government likes to say that, by fortifying the Northeast, we are ‘digging a hole to die in’. To this I say ‘Forget not what happened in Ju’! It was to Ju that the State of Qi retreated, and from there that it reconquered all that it had lost. When the time is right, the Northeast will be our Ju, and the whole of China will be our Qi. The War of Southern Reclamation is inevitable, long live the Republic!"
 fengtian.new.79.a:0 ""
 
 fengtian.new.80.t:0 ""
