I dont always commit, but when i do...

--- a/localisation/KR_Venezuela_l_english.yml
+++ b/localisation/KR_Venezuela_l_english.yml
@@ -1,4 +1,21 @@
 ﻿l_english:
+### Ideas ###
+VENdefense:0 "Staying Power"
+VENdefense_desc:0 "Our troops are well versed in Weltkreig tactics, and can hold their own against most enemies"
+VENdirectelection:0 "Promised Direct Elections"
+VENdirectelection_desc:0 "The promise of direct elections calms the people"
+VENsafe:0 "Diversified Economy"
+VENsafe_desc:0 "Our economy now relies less on Oil Exports"
+VENsupersafe:0 "More Diversified Economy"
+VENsupersafe_desc:0 "Our economy now relies even less on Oil Exports"
+VENwell:0 "Economic Recovery"
+VENwell_desc:0 "Our economy has bounced back from the crisis. It seems that the worst is over.."
+VENlandform:0 "Land Reform"
+VENlandform_desc:0 "By the people for the people, the lands worked by the peasants will soon belong to them"
+VENblackmonday:0 "Black Monday Hits the Oil Wells"
+VENblackmonday_desc:0 "Our economy is pretty much based on Oil, and for many years we enjoyed good prices. But with the crash of the Berlin stock market, demand has plummeted and the our economy is trapped in a downwards spiral!"
+VEN_longter_mplanning:0 "Long Term Strategic Planning"
+VEN_longter_mplanning_desc:0 "It's important for us to see the bigger picture in these dangerous times; we will be ready for war when it comes"
 
 ### Opinion Modifiers ###
 VEN_nationalized:0 "Nationalised Oil Industry"
@@ -25,6 +42,72 @@ VEN_syndicalist_party:0 "PSV"
 VEN_syndicalist_party_long:0 "Partido Sindico-Anarquista Venezolano"
 VEN_totalist_party:0 "MIRST"
 VEN_totalist_party_long:0 "Movimiento de Izquierda Revolucionaria Social Totalista"
+## Focuses ## 
+
+VEN_indreseach:0 "Industrial Improvements"
+VEN_ecofac:0 "Industrial Construction"
+VEN_indreseach2:0 "Industrial Advancements"
+VEN_ecofac2:0 "Industrial Effort"
+VEN_inf:0 "Emergency Infrastructure Works"
+VEN_milinf:0 "Airport Construction Effort"
+VEN_inf2:0 "Infrastructure Renewal"
+VEN_longtermplanning:0 "Long Term Economic Planning"
+VEN_healthyeco:0 "Economical Recovery"
+VEN_education:0 "Higher Learning Investment"
+VEN_navalindustry:0 "Naval Industry Investments"
+VEN_industrialization:0 "Urban Industrialization"
+VEN_blackmonday:0 "Black Monday hits the Oil Wells"
+VEN_diversification1:0 "Weapons Industry"
+VEN_diversification2:0 "Diversification Efforts"
+VEN_diversification3:0 "Army Goods Self Suficciency"
+VEN_defensecontracts:0 "Defense Contracts"
+VEN_flexibilty:0 "Economic Flexibility"
+VEN_thedutchdisease:0 "Dealing with the Dutch Disease"
+VEN_blackmondaysafe:0 "Safety from Market Fluctuations"
+VEN_economicalbonanza:0 "Economical Bonanza"
+VEN_homefrontwon:0 "Victory in the Homefront"
+VEN_capitaliseonsucess:0 "Capitalize on Economic Sucess"
+VEN_military:0 "Armed Forces Renewal"
+VEN_navy:0 "Navy of Venezuela"
+VEN_yard:0 "Dockyard Effort"
+VEN_bom:0 "Bomber Effort"
+VEN_fight:0 "Fighter Effort"
+VEN_propertraining:0 "Proper Training"
+VEN_armaments:0 "Armament Renewal"
+VEN_doctrine:0 "Modern Military Doctrine"
+VEN_doctrineA:0 "Strategic Focus"
+VEN_stayingpower:0 "Staying Power"
+VEN_trenchsys:0 "Trench Systems"
+VEN_doctrineB:0 "Tactical Focus"
+VEN_tan:0 "Tank Warfare"
+VEN_mechaniz:0 "Army Mobility"
+VEN_fortifications:0 "Plan Contreras"
+VEN_divisional:0 "Modern Divisional Structure"
+VEN_milsci:0 "Miltary Science"
+VEN_controlledthaw:0 "Controlled Thaw"
+VEN_caudillonegotiations:0 "Caudillo Negotiations"
+VEN_conservative:0 "Conservative Transition"
+VEN_propagandaeffort:0 "Propaganda Effort"
+VEN_faithinliberty:0 "Faith in Democracy"
+VEN_political_liberalization:0 "Political Liberalization"
+VEN_represtative_overtures:0 "Representative Overtures"
+VEN_closertieswithlpl:0 "Closer ties with la Plata"
+VEN_liberation:0 "Liberation of the Workers"
+VEN_plannedimportsubstution:0 "Planned Import Substuition"
+VEN_industrialization1:0 "Intensify Import Substuition"
+VEN_industrialization2:0 "Finisih Import Substuition Project"
+VEN_proceedviceroy:0 "Nationalize All Oil Wells"
+VEN_noneofyouarefreeofsin:0 "Dig for more Oil!"
+VEN_powertothepeople:0 "Power to the People!"
+VEN_collectivistprinciples:0 "Collectivist Principles"
+VEN_flameoffreedom:0 "The Flame of Freedom"
+VEN_researchjoineffort:0 "Joint Research Effort"
+VEN_begin_land_reform:0 "Begin Land Reform"
+VEN_brazilianmodel:0 "Adopt Leuenrothist Princples"
+VEN_liberatecolombia:0 "Liberate Colombia"
+VEN_unitedbrothers:0 "United Brothers"
+
+
 
 ### Events ###
 ven.1.t:0 "Venezuela's place in the world"
