--- a/localisation/KR_Paraguay_l_english.yml
+++ b/localisation/KR_Paraguay_l_english.yml
@@ -22,6 +22,39 @@ PAR_syndicalist_party_long:0 "Partido Sindicalista de Paraguay"
 PAR_totalist_party:0 "PMP"
 PAR_totalist_party_long:0 "Partido Maximalista Paraguayo"
 
+### Focus ###
+PAR_libertadomuerte:0 "Libertad o Muerte"
+PAR_rebuildgovernment:0 "Rebuild the Government"
+PAR_deargentinezation:0 "DeArgentinzation of the Govermnet"
+PAR_reorganizedjustice:0 "Reorganized Justice System"
+PAR_greatpublicworks:0 "Great Public Works"
+PAR_thelayoftheland:0 "Lay of Land"
+PAR_statefinishrebuilding:0 "Finish Rebuilding of the State"
+PAR_deporttheinvaders:0 "Deport the Invaders"
+PAR_milfacadm:0 "Extensive Rearmaemnt Program"
+PAR_expellargentinefarmers:0 "Siezer Argentine Farms"
+PAR_siezeargieubran:0 "Sieze Argentine Property"
+PAR_industrialinvestments:0 "Industrial Effort"
+PAR_industrialinvestments2:0 "Redouble Industrial Effort"
+PAR_wartimeindustry:0 "Wartime Industry Adaptability"
+PAR_airbaseexpansion:0 "Air Base Expansion"
+PAR_fortressasuncion:0 "Fortress Asuncion"
+PAR_militaryfactories:0 "Military Production Focus"
+PAR_newbornrethoric:0 "Reborn National Rethoric"
+PAR_natiobuilding:0 "Nationbuilding"
+PAR_patriot:0 "Patriot Spirit"
+PAR_defensoresdelchaco:0 "Honor the Defensores Del Chaco"
+PAR_armyofparaguay:0 "The Army of Paraguay"
+PAR_officerrenewal:0 "Recruit New Officer Corps"
+PAR_weaponseffort:0 "Infantry Equipment Licenses"
+PAR_arty:0 "Artillery Renewal"
+PAR_modernwarmachines:0 "Modern War Machines"
+PAR_wewerentexpectingspecialforces:0 "Special Forces of the Republic"
+PAR_legacyofthedefenders:0 "Legacy of the Defensores"
+PAR_aircraft:0 "Renew Aerial Investments"
+PAR_bombs:0 "Bomber Sqadrons"
+
+
 ### Events ###
 par.1.t:0 "Presidential Elections of 1945"
 par.1.d:0 "Since we have been granted autonomy, the people were longing for finally electing their President. Three main parties are disputing: First, we have the conservative National Republican Association (Asociación Nacional Republicana), better known as the Partido Colorado, under Juan Manuel Frutos. Next, the liberal Partido Azul, represented by José Patricio Guggiari. And finally, the social-democratic Liga Nacional Independiente, with Rafael Franco."
